# revolutionary-mlop

./: README.md  model_history.json  pyproject.toml
.github/workflows/: model-ci-cd.yml
scripts/: render_model_status.py  train_and_validate.py
